[package]
name = "server-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
image = "0.25.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.5" }
anyhow = "1.0.86"
urlencoding = "2.1.3"